fix overflow on body

--- a/src/app.less
+++ b/src/app.less
@@ -21,7 +21,6 @@
 body, html {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   width: 100%;
   height: 100%;
   font-family: "Geomanist", "Open Sans", sans-serif;
